Fixed really bad design bug, non aligning menu

--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -75,6 +75,9 @@ $experimental-support-for-opera: true;
         background-color: #33332d;
         display: inline-block;
 
+	a {
+		padding: 10px 5px 10px 5px;
+	}
         i {
           display: none;
         }
