--- a/css/style.scss
+++ b/css/style.scss
@@ -245,7 +245,7 @@ iframe#latitude {
         text-decoration: none;
 
         line-height: 1.5em;
-        padding: 10px 5px 10px 5px;
+        padding: 10px 5px 10px 15px;
         &.active,
         &:hover {
           color: $textcolor;
